_styles/resume.scss
#resume {
  background-color: white;
  box-sizing: border-box;
  display: block;
  flex-grow: 1;
  font-family: -apple-system, ".SFNSText-Regular", "San Francisco", "Roboto", "Segoe UI", "Helvetica Neue", "Lucida Grande", sans-serif;
  line-height: 1.5rem;
  max-width: 210mm;
  padding: 1rem;

  a:hover {text-decoration: underline}

  header {
    margin-bottom: 1rem;

    h1 {
      font-size: 1.5rem;
    }
    p {
      color: darken(white, 20);
      font-style: italic
    }
  }

  section {
    position: relative;

    &+ section { margin-top: 0.5rem }
    ul {
      li {
        &+ li { margin-top: 0.5rem }
        time {
          color: darken(white, 20);
          float: left;
          font-style: italic
        }
        h3 {
          font-weight: bold;
          margin-left: 20%
        }
        p { margin-left: 20% }
        aside {
          margin-left: 20%;
          color: darken(white, 20);
          font-style: italic;
        }
      }
    }
  }
}

@media print {
  #resume {
    box-shadow: none;
    color: black;
    font-family: "Times New Roman", Times, serif;
    font-size: 11pt;
    line-height: 14pt;
    padding: 3rem 3rem 0 3rem;

    header h1 {
        font-size: 18pt;
        line-height: 24pt
    }
    section {
      h2 { position: absolute }
      ul li {
        h3, p, aside { margin-left: 40% }
        time { margin-left: 20% }
      }
    }
  }
}

